--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,52 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>로또 서비스</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 120px;
-            background-color: #fafafa;
-        }
-
-        h1 {
-            font-size: 36px;
-            font-weight: bold;
-            margin-bottom: 50px;
-        }
-
-        .button {
-            display: block;
-            width: 240px;
-            padding: 15px 0;
-            margin: 12px auto;
-            font-size: 18px;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 8px;
-            background-color: #007bff;
-            transition: 0.25s ease;
-        }
-
-        .button:hover {
-            background-color: #0056b3;
-        }
-
-        .secondary {
-            background-color: #28a745;
-        }
-
-        .secondary:hover {
-            background-color: #1c7d32;
-        }
-    </style>
+    <!-- Bootstrap Full CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-
-<h1>🎰 로또 서비스에 오신 것을 환영합니다</h1>
-
-<a class="button" href="/lotto">로또 시작하기</a>
-<a class="button secondary" href="/lotto/result">조회하기</a>
-
+<body class="d-flex flex-column justify-content-center align-items-center text-center" style="height:100vh;">
+<h1 class="mb-4">🎰 로또 서비스</h1>
+<div class="d-flex gap-3">
+    <a class="btn btn-primary btn-lg" href="/lotto">로또 시작하기</a>
+    <a class="btn btn-secondary btn-lg" href="/lotto/result">조회하기</a>
+</div>
 </body>
 </html>
