feat: 로또 history 뷰 구현

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
 <h1 class="mb-4">🎰 로또 서비스</h1>
 <div class="d-flex gap-3">
     <a class="btn btn-primary btn-lg" href="/lotto">로또 시작하기</a>
-    <a class="btn btn-secondary btn-lg" href="/lotto/result">조회하기</a>
+    <a class="btn btn-secondary btn-lg" href="/history">조회하기</a>
 </div>
 </body>
 </html>
