--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,15 +2,74 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>로또 서비스</title>
-    <!-- Bootstrap Full CSS -->
+    <title>로또 서비스 데모 단계</title>
+
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <style>
+        body {
+            background: #f7f9fc;
+        }
+        .stage-card {
+            transition: 0.25s;
+            cursor: pointer;
+        }
+        .stage-card:hover {
+            transform: translateY(-6px);
+            box-shadow: 0 8px 20px rgba(0,0,0,0.12);
+        }
+    </style>
 </head>
-<body class="d-flex flex-column justify-content-center align-items-center text-center" style="height:100vh;">
-<h1 class="mb-4">🎰 로또 서비스</h1>
-<div class="d-flex gap-3">
-    <a class="btn btn-primary btn-lg" href="/lotto">로또 시작하기</a>
-    <a class="btn btn-secondary btn-lg" href="/history">조회하기</a>
+
+<body class="container py-5">
+
+<div class="text-center mb-5">
+    <h1 class="fw-bold">🎰 로또 서비스 단계별 구현</h1>
+    <p class="text-muted">MVC의 필요성을 단계적으로 학습하기 위해 구현 단계를 분리했습니다.</p>
+    <hr>
 </div>
+
+<div class="row g-4">
+    <!-- 1단계 -->
+    <div class="col-md-4">
+        <a href="/servlet" class="text-decoration-none text-dark">
+            <div class="card stage-card p-4 text-center">
+                <h4 class="fw-bold">1️⃣ Servlet 단일 구조</h4>
+                <p class="text-muted mt-2">
+                    HTML View + 로직 + 상태 저장을 모두 Servlet에서 처리
+                    👉 MVC 필요성을 체감하기 위함
+                </p>
+            </div>
+        </a>
+    </div>
+
+    <!-- 2단계 -->
+    <div class="col-md-4">
+        <a href="/lotto-v2" class="text-decoration-none text-dark">
+            <div class="card stage-card p-4 text-center">
+                <h4 class="fw-bold">2️⃣ Servlet + JSP 분리</h4>
+                <p class="text-muted mt-2">
+                    화면 렌더링 책임을 JSP로 이동
+                    Controller / View 분리 시작
+                </p>
+            </div>
+        </a>
+    </div>
+
+    <!-- 3단계 -->
+    <div class="col-md-4">
+        <a href="/lotto-v3" class="text-decoration-none text-dark">
+            <div class="card stage-card p-4 text-center">
+                <h4 class="fw-bold">3️⃣ Servlet + JSP + DB</h4>
+                <p class="text-muted mt-2">
+                    H2 DB 연동하여 로또 구매 기록 저장
+                    MVC 구조 기반 아키텍처 강화
+                </p>
+            </div>
+        </a>
+    </div>
+</div>
+
 </body>
 </html>
