--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -46,7 +46,7 @@
 
     <!-- 2단계 -->
     <div class="col-md-4">
-        <a href="/lotto-v2" class="text-decoration-none text-dark">
+        <a href="/servelt" class="text-decoration-none text-dark">
             <div class="card stage-card p-4 text-center">
                 <h4 class="fw-bold">2️⃣ Servlet + JSP 분리</h4>
                 <p class="text-muted mt-2">
