--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -58,7 +58,7 @@
 
     <!-- 3단계 (세션 로그인) -->
     <div class="col-md-4">
-        <a href="/servlet/jsp/v2" class="text-decoration-none text-dark">
+        <a href="/v3/servlet/jsp/login" class="text-decoration-none text-dark">
             <div class="card stage-card p-4 text-center">
                 <h4 class="fw-bold">3️⃣ Session 기반 로그인 추가</h4>
                 <p class="text-muted mt-2">
